# vnpy-ctp-wrapper

./: LICENSE  README.md  build.bat
lib/boost_1_68_0/lib64-msvc-12.0/: libboost_numpy36-vc120-mt-x64-1_68.lib
lib/ctp/: version.txt
lib/ctp/inc/: ThostFtdcTraderApi_compat.h
src/: CMakeLists.txt
src/vnctptd/: vnctptd.cpp  vnctptd.h
